*** 3.4.1 / 2006-10-13

+ 3 minor enhancements:
	+ FUNDAMENTALLY changed the way failures map back to tests. This REQUIRES users of autotest to ensure that their tests and impls map 1:1 at every scoping level. I'll blog more details.
	+ Hoe'd rakefile
	+ Added support for render :collection to RenderTree.
+ 7 bug fixes:
	+ Fixed autotest tests for custom ruby names.
	+ Fixed some documentation errors in ControllerTestCase.
	+ Fixed setup in FunctionalTestCase.
	+ Allowed @assigns_ignored to contain either Symbols or Strings, bug 5233.
	+ Using Object.path2class to look up classes in helper test cases, bug 5493.
	+ Added assert_text_area, bug 5452.
	+ Renamed assert_select to assert_select_tag. Stupid rails. We were here first.

*** 3.4.0 / 2006-09-12

+ 13 minor enhancements:
	* Broke out example_dot_autotest into multiple files in lib.
	* Enhanced hook system so it can return true if event handled.
	* Sleep is now 1 second by default because life is too short.
	* Hooked interrupt with new hook system. First handler wins.
	* Hooked test results before output
	* Accurate test counts for Test::Rails.
	* Added snarl autotest plugin, thanks to Patrick Hurley.
	* Added timestamp autotest plugin, thanks to Joe Goldberg.
	* Added redgreen, thanks to Pat Eyler, Sean Carley, and Rob Sanheim.
	* Added kdenotify autotest plugin, thanks to Geir Freysson.
	* Added markaby support for Test::Rails.
	* Added hack to display a tree of render calls.
	* Added hook to perform extra setup for 
+ 5 bug fixes:
	- Extended zentest to deal with rails a bit better... ugh.
	- Fixed @libs for windoze.
	- Fixed inner class/test identification in autotest.
	- Namespaced all plugins... eric is anal.
	- No longer freak out if rubygems tarball not in multiruby/versions.

*** 3.3.0 / 2006-07-28

+ 1 major enhancement:
	+ autotest has been rewritten to be much cleaner, now has a plugin system.
+ 5 minor enhancements: