@@ -1,3 +1,14 @@
+# ActionPack
+module ActionController; end
+class ActionController::Flash; end
+class ActionController::Flash::FlashHash; end
+class ActionController::TestSession < Hash; end
+
+class ActionController::TestRequest
+  attr_accessor :session
+end
+class ActionController::TestResponse; end
+
 class ApplicationController; end
 
 module ActionView; end
@@ -9,4 +20,11 @@ module ActionView::Helpers::FormOptionsHelper; end
 module ActionView::Helpers::FormHelper; end
 module ActionView::Helpers::UrlHelper; end
 module ActionView::Helpers::AssetTagHelper; end
+
+# ActionMailer
+
+module ActionMailer; end
+class ActionMailer::Base
+  def self.deliveries=(arg); end
+end
 
